# ssu-chapel

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  docker-compose.override.yml  docker-compose.yml  init-letsencrypt.sh  package-lock.json
backend/: pyproject.toml  test_email.py  test_email_template.py  test_multiemail.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_initial_tables.py  0002_add_auth_codes_and_unsub_token.py  0002_add_subscriptions.py
backend/app/: SendMail.py  config.py  database.py  email_template.py  main.py  scheuler.py
backend/app/models/: __init__.py  auth_code.py  notice.py  subscription.py
backend/app/routers/: auth.py  notice.py  subscription.py  test_page.py
backend/app/schemas/: subscription.py
backend/app/services/: notice_collector.py
backend/docs/: ERD.md
backend/scatch-crawler/: main.py  requirements.txt
docs/: 2026-04-02.md  claude-code-session-2026-03-20.md  claude-code-session-2026-03-22-early.md  claude-code-session-2026-03-22.md  deploy.md  email-subscription-setup.md  project-overview.md  rusaint-cli.md
frontend/: .env  index.html  package.json
mail-frontend/: .env.example  .gitignore  index.html  (+2 more)
rusaint-wasm/: Cargo.toml  Dockerfile  docker-entrypoint.sh  package-lock.json  package.json  wrangler.toml
rusaint-wasm/.wrangler/tmp/bundle-Nlmj6t/: middleware-insertion-facade.js  middleware-loader.entry.ts
rusaint-wasm/.wrangler/tmp/dev-VoANA8/: c734275b27c544206c3fd845ca626e9f76129a6b-index_bg.wasm  shim.js  shim.js.map
rusaint-wasm/src/: lib.rs
(+37 files in other folders)
