[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssu-chapel-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.0",
    "email-validator>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
